--- a/src/components/card/__room-sample/card__room-sample.scss
+++ b/src/components/card/__room-sample/card__room-sample.scss
@@ -29,28 +29,35 @@ $black: #000000;
   &__arrow-scroller_left,
   &__arrow-scroller_right {
     position: absolute;
+    display: flex;
+  }
+
+  &__arrows-container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    opacity: 0;
+    transition: opacity .5s ease;
+
+    &:hover {
+      opacity: 1;
+    }
   }
 
   &__arrow-scroller {
     &_left,
     &_right {
       top: 0px;
-      display: flex;
       align-items: center;
       justify-content: center;
       height: inherit;
       width: 42px;
       background: linear-gradient(90deg, rgba($black, 0.5) 0%, rgba($black, 0) 99.99%, rgba($white, 0) 100%);
-      cursor: pointer;
-      opacity: 0;
-      transition: opacity .5s ease;
-
-      &:hover {
-        opacity: 1;
-      }
-
+      
+      &,
       & > .material-icons {
-        cursor: inherit;
+        cursor: pointer;
       }
     }
 
@@ -61,8 +68,6 @@ $black: #000000;
   }
 
   &__listing-indicator {
-    position: absolute;
-    display: flex;
     justify-content: space-between;
     width: 41px;
     bottom: 15px;
