--- a/src/components/card/__room-sample/card__room-sample.scss
+++ b/src/components/card/__room-sample/card__room-sample.scss
@@ -5,11 +5,14 @@ $black: #000000;
 
 .room-sample {
   background-color: $white;
-  width: $cardWidth;
+
+  &,
+  &__container_top {
+    width: $cardWidth;
+  }
 
   &__container_top {
     position: relative;
-    width: $cardWidth;
     height: 151px;
     border-radius: 4px 4px 0px 0px;
     background-color: $valhalla;
@@ -32,11 +35,16 @@ $black: #000000;
     display: flex;
   }
 
+  &__arrows-container,
+  &__arrow-scroller_left,
+  &__arrow-scroller_right {
+    top: 0px;
+    height: 100%;
+  }
+
   &__arrows-container {
     position: absolute;
     width: 100%;
-    height: 100%;
-    top: 0px;
     opacity: 0;
     transition: opacity .5s ease;
 
@@ -51,10 +59,9 @@ $black: #000000;
       top: 0px;
       align-items: center;
       justify-content: center;
-      height: inherit;
       width: 42px;
       background: linear-gradient(90deg, rgba($black, 0.5) 0%, rgba($black, 0) 99.99%, rgba($white, 0) 100%);
-      
+
       &,
       & > .material-icons {
         cursor: pointer;
@@ -77,7 +84,6 @@ $black: #000000;
       font-size: 8px;
     }
   }
-
 
   &__container_bottom {
     padding: 20px;
