--- a/src/components/votes-chart/votes-chart.scss
+++ b/src/components/votes-chart/votes-chart.scss
@@ -11,7 +11,7 @@
   }
 
   &__diagram-element {
-    transform: rotateZ(-90deg);
+    animation: infiniteRotation 60s linear infinite;
 
     &_unit {
       fill: none;
@@ -105,5 +105,22 @@
 
   &_quaternary {
     background: $quaternary-gradient;
+  }
+}
+
+@keyframes infiniteRotation {
+  from {
+    -ms-transform: rotate( 0deg );
+    -moz-transform: rotate( 0deg );
+    -webkit-transform: rotate( 0deg );
+    -o-transform: rotate( 0deg );
+    transform: rotate( 0deg );
+  }
+  to {
+    -ms-transform: rotate( 360deg );
+    -moz-transform: rotate( 360deg );
+    -webkit-transform: rotate( 360deg );
+    -o-transform: rotate( 360deg );
+    transform: rotate( 360deg );
   }
 }
