--- a/src/pages/website/__room/website__room.pug
+++ b/src/pages/website/__room/website__room.pug
@@ -23,23 +23,24 @@ block main
           .room-page__room-advantages
             .room-page__title
               span.custom-font-style_h2 Сведения о номере
-            +advantageBars([
-              {
-                iconname: "insert_emoticon",
-                title: "Комфорт",
-                brief: "Шумопоглощающие стены"
-              },
-              {
-                iconname: "location_city",
-                title: "Удобство",
-                brief: "Окно в каждой из спален"
-              },
-              {
-                iconname: "whatshot",
-                title: "Уют",
-                brief: "Номер оснащён камином"
-              }
-            ])
+            .block__advantage-bars
+              +advantageBars([
+                {
+                  iconname: "insert_emoticon",
+                  title: "Комфорт",
+                  brief: "Шумопоглощающие стены"
+                },
+                {
+                  iconname: "location_city",
+                  title: "Удобство",
+                  brief: "Окно в каждой из спален"
+                },
+                {
+                  iconname: "whatshot",
+                  title: "Уют",
+                  brief: "Номер оснащён камином"
+                }
+              ])
           .room-page__visitors-impression-chart
             .room-page__title
               span.custom-font-style_h2 Впечатления от номера
@@ -52,29 +53,30 @@ block main
           .room-page__reviews
             .room-page__title
               span.custom-font-style_h2 Отзывы посетителей номера
-            +commentBar([
-              {
-                name: "Мурад Сарафанов",
-                daysago: "5 дней назад",
-                avatarname: "murad",
-                text: "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.",
-                likebtn: {
-                  groupname: "room-page__comment-first",
-                  pressed: true,
-                  likecount: 12
-                }
-              },
-              {
-                name: "Патрисия Стёклышкова",
-                daysago: "Неделю назад",
-                avatarname: "patricia",
-                text: "Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент",
-                likebtn: {
-                  groupname: "room-page__comment-second",
-                  pressed: false,
-                  likecount: 3
-                }
-              },
+            .block__advantage-bars
+              +commentBar([
+                {
+                  name: "Мурад Сарафанов",
+                  daysago: "5 дней назад",
+                  avatarname: "murad",
+                  text: "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.",
+                  likebtn: {
+                    groupname: "room-page__comment-first",
+                    pressed: true,
+                    likecount: 12
+                  }
+                },
+                {
+                  name: "Патрисия Стёклышкова",
+                  daysago: "Неделю назад",
+                  avatarname: "patricia",
+                  text: "Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент",
+                  likebtn: {
+                    groupname: "room-page__comment-second",
+                    pressed: false,
+                    likecount: 3
+                  }
+                },
             ])
           .room-page__rules-list
             .room-page__title
