--- a/src/components/votes-chart/votes-chart.pug
+++ b/src/components/votes-chart/votes-chart.pug
@@ -29,6 +29,7 @@ mixin votesChart( items=[] )
             stroke-width=strokeWidth
             stroke-dasharray=`${strokeFilled - strokeGap} ${strokeLength}`
             stroke-dashoffset=strokeOffset
+            data-votes=item.votes
           )
           - strokeOffset -= strokeFilled
 
