Modifying votes-chart element 3

--- a/src/components/votes-chart/votes-chart.pug
+++ b/src/components/votes-chart/votes-chart.pug
@@ -30,6 +30,7 @@ mixin votesChart( items=[] )
             stroke-dasharray=`${strokeFilled - strokeGap} ${strokeLength}`
             stroke-dashoffset=strokeOffset
             data-votes=item.votes
+            data-votes-total=votesTotal
           )
           - strokeOffset -= strokeFilled
 
