--- a/src/components/votes-chart/votes-chart.pug
+++ b/src/components/votes-chart/votes-chart.pug
@@ -14,34 +14,36 @@ mixin votesChart( items=[] )
         defs
           each item in items
             - votesTotal += item.votes
-            linearGradient( id=`${ item.gradient }-gradient` x1="1" y1="0" x2="0" y2="0" )
-              stop( class=`gradient__${ item.gradient }_start` offset="0%" )
-              stop( class=`gradient__${ item.gradient }_end`   offset="100%" )
+            linearGradient( id=`${item.gradient}-gradient` x1="1" y1="0" x2="0" y2="0" )
+              stop( class=`gradient__${item.gradient}_start` offset="0%" )
+              stop( class=`gradient__${item.gradient}_end`   offset="100%" )
 
         each item in items
           - const votesPercentage = item.votes / votesTotal
           - const strokeFilled = item.votes !== 0 ? strokeLength * votesPercentage : strokeGap
           circle.votes-chart__diagram-element_unit(
+            id=`votes-chart-${item.gradient}`
             r=figureInnerRadius
             cx="50%"
             cy="50%"
-            stroke=`url(#${ item.gradient }-gradient)`
+            stroke=`url(#${item.gradient}-gradient)`
             stroke-width=strokeWidth
             stroke-dasharray=`${strokeFilled - strokeGap} ${strokeLength}`
             stroke-dashoffset=strokeOffset
+            data-votes=item.votes
           )
           - strokeOffset -= strokeFilled
 
       .votes-chart__diagram-text 
-        span.votes-chart__diagram-text_votes.custom-font-style_h1 #{ votesTotal }
-        span.votes-chart__diagram-text_word.custom-font-style_h3 голос#{ defineWordEnding( votesTotal ) }
+        span.votes-chart__diagram-text_votes.custom-font-style_h1 #{votesTotal}
+        span.votes-chart__diagram-text_word.custom-font-style_h3 голос#{defineWordEnding( votesTotal )}
 
     .votes-chart__legend
       - const sortedItems = sortArray( items )
       each item in sortedItems
-        .votes-chart__legend-item
-          .votes-chart__legend-item_marker( class=`marker_${ item.gradient }` )
-          .votes-chart__legend-item_text.custom-font-style_body #{ item.legend }
+        label.votes-chart__legend-item( for=`votes-chart-${item.gradient}` )
+          .votes-chart__legend-item_marker( class=`marker_${item.gradient}` )
+          .votes-chart__legend-item_text.custom-font-style_body #{item.legend}
 
 -
   function defineWordEnding( num ) {
@@ -49,15 +51,15 @@ mixin votesChart( items=[] )
 
     if ( Math.floor(num/10)===1 || num%10<1 || num%10>4 ) {
       result = "ов";
-    } else {
+   } else {
       if ( num%10>1 ) {
         result = "a";
-      }
-    }
+     }
+   }
     return result;
-  }
+ }
 
   function sortArray( arr ) {
     arr.reverse().push( arr.shift() );
     return arr;
-  }
+ }
