--- a/src/components/votes-chart/votes-chart.scss
+++ b/src/components/votes-chart/votes-chart.scss
@@ -28,8 +28,8 @@
     align-items: center;
     text-transform: uppercase;
 
-    & > &_votes,
-    & > &_word {
+    &_votes,
+    &_word {
       color: $perfume;
     }
   }
@@ -62,6 +62,7 @@
       stop-color: $perfume;
     }
     &_end {
+      color: $portage;
       stop-color: $portage;
     }
   }
@@ -71,6 +72,7 @@
       stop-color: $silver-tree;
     }
     &_end {
+      color: $turquoise-blue;
       stop-color: $turquoise-blue;
     }
   }
@@ -80,6 +82,7 @@
       stop-color: $cream-brulee;
     }
     &_end {
+      color: $mandys-pink;
       stop-color: $mandys-pink;
     }
   }
@@ -89,6 +92,7 @@
       stop-color: $suva-grey;
     }
     &_end {
+      color: $port-gore;
       stop-color: $port-gore;
     }
   }
