--- a/src/components/votes-chart/votes-chart.scss
+++ b/src/components/votes-chart/votes-chart.scss
@@ -1,11 +1,20 @@
 @import "@variables";
 
 .votes-chart {
-  display: flex;
+  &,
+  &__legend {
+    display: flex;
+    align-items: flex-start;
+  }
 
+  &__diagram,
+  &__diagram-text,
+  &__legend-item {
+    display: flex;
+  }
+  
   &__diagram {
     position: relative;
-    display: flex;
     align-items: center;
     justify-content: center;
   }
@@ -24,7 +33,6 @@
 
   &__diagram-text {
     position: absolute;
-    display: flex;
     flex-direction: column;
     align-items: center;
     text-transform: uppercase;
@@ -32,12 +40,11 @@
     &_votes,
     &_word {
       color: $perfume;
-      transition: color .5s ease;
+      transition: color .8s ease;
     }
   }
 
   &__legend {
-    display: flex;
     flex-direction: column;
     justify-content: flex-end;
     margin-left: 30px;
