--- a/src/pages/website/__room/website__room.pug
+++ b/src/pages/website/__room/website__room.pug
@@ -45,7 +45,7 @@ block main
             .room-page__title
               span.custom-font-style_h2 Впечатления от номера
             +votesChart({
-              id: 'group',
+              id: 'room-page-888',
               units: [
                 { gradient: "primary",    votes: 260, legend: "Удовлетворительно" },
                 { gradient: "secondary",  votes: 259, legend: "Хорошо"            },
