--- a/src/pages/website/__room/website__room.pug
+++ b/src/pages/website/__room/website__room.pug
@@ -47,10 +47,10 @@ block main
             +votesChart({
               id: 'room-page-888',
               units: [
+                { gradient: "quaternary", votes: 0,  legend: "Разочарован"        },
                 { gradient: "primary",    votes: 260, legend: "Удовлетворительно" },
                 { gradient: "secondary",  votes: 259, legend: "Хорошо"            },
-                { gradient: "tertiary",   votes: 521, legend: "Великолепно"       },
-                { gradient: "quaternary", votes: 0,  legend: "Разочарован"       }
+                { gradient: "tertiary",   votes: 521, legend: "Великолепно"       }
               ]
             })
           .room-page__reviews
