room original images, thumbnails and backgrounds is no longer belongs to png family, but to jpg

--- a/src/components/card/__room-sample/card__room-sample.pug
+++ b/src/components/card/__room-sample/card__room-sample.pug
@@ -20,7 +20,7 @@ mixin cardRoomSample( item )
     .room-sample__container_top
       .room-sample__image
         each suffix in suffixes
-          img( src=require(`/src/assets/images/raster/room/__thumbnail/room__thumbnail_${ suffix }.png`) )
+          img( src=require(`/src/assets/images/raster/room/__thumbnail/room__thumbnail_${ suffix }.jpg`) )
       .room-sample__listing-indicator
         +materialIcon("circle")
         +materialIcon("panorama_fish_eye")
