--- a/src/pages/website/__room/website__room.pug
+++ b/src/pages/website/__room/website__room.pug
@@ -14,10 +14,10 @@ block main
     .room-page
       .room-page__section_interiors-footage
         .room-page__footage_left
-          img.room-page__interior-pic_major( src=require(`/src/assets/images/raster/room/__original/room__original_888-1.png`) )
+          img.room-page__interior-pic_major( src=require(`/src/assets/images/raster/room/__original/room__original_888-1.jpg`) )
         .room-page__footage_right
-          img.room-page__interior-pic_minor-top( src=require(`/src/assets/images/raster/room/__original/room__original_888-2.png`) )
-          img.room-page__interior-pic_minor-bottom( src=require(`/src/assets/images/raster/room/__original/room__original_888-3.png`) )  
+          img.room-page__interior-pic_minor-top( src=require(`/src/assets/images/raster/room/__original/room__original_888-2.jpg`) )
+          img.room-page__interior-pic_minor-bottom( src=require(`/src/assets/images/raster/room/__original/room__original_888-3.jpg`) )  
       .room-page__section_information.universal-container
         .room-page__sub-section_left
           .room-page__room-advantages
@@ -48,9 +48,9 @@ block main
               id: 'room-page-888',
               units: [
                 { gradient: "quaternary", votes: 0,   legend: "Разочарован"       },
-                { gradient: "primary",    votes: 261, legend: "Удовлетворительно" },
+                { gradient: "primary",    votes: 260, legend: "Удовлетворительно" },
                 { gradient: "secondary",  votes: 259, legend: "Хорошо"            },
-                { gradient: "tertiary",   votes: 520, legend: "Великолепно"       }
+                { gradient: "tertiary",   votes: 521, legend: "Великолепно"       }
               ]
             })
           .room-page__reviews
