--- a/src/pages/website/website.scss
+++ b/src/pages/website/website.scss
@@ -46,7 +46,7 @@
   &__landing {
     padding-top: 70px;
     min-height: 830px;
-    background-image: url("/src/assets/images/raster/background/background__landing.png");
+    background-image: url("/src/assets/images/raster/background/background__landing.jpg");
   }
 
   &__login-n-registration {
@@ -54,6 +54,6 @@
     align-items: center;
     justify-content: center;
     min-height: 690px;
-    background-image: url("/src/assets/images/raster/background/background__login-n-registration.png");
+    background-image: url("/src/assets/images/raster/background/background__login-n-registration.jpg");
   }
 }
