--- a/src/components/input/_date-picker/input_date-picker.scss
+++ b/src/components/input/_date-picker/input_date-picker.scss
@@ -8,11 +8,24 @@
 .input__date-picker {
   position: absolute;
   top: 50px;
-  padding: 20px 19px;
-  visibility: hidden;
+  padding: 19px;
+  width: 280px;
   border: 1px solid rgba($valhalla, .5);
   border-radius: 4px;
   background-color: $white;
   box-shadow: 0px 10px 20px rgba($valhalla, 0.05);
   z-index: 20;
+  visibility: hidden;
+}
+
+.air-datepicker {
+  --adp-font-family: inherit;
+  --adp-transition-duration: none;
+  --adp-transition-ease: none;
+  --adp-transition-offset: none;
+  --adp-padding: 0;
+  --adp-width: 100%;
+  --adp-day-cell-height: 40px;
+  --adp-day-cell-width: 40px;
+  --adp-cell-border-radius:50%;
 }
