Date picker is under refactoring 6

--- a/src/variables/variables.scss
+++ b/src/variables/variables.scss
@@ -2,7 +2,9 @@ $valhalla: #1F2041;
 $whisper: #E5E5E5;
 
 $perfume: #BC9CFF;
+$perfume-a: rgba($perfume, .25);
 $portage: #8BA4F9;
+$portage-a: rgba($portage, .25);
 
 $silver-tree:    #6FCF97;
 $turquoise-blue: #66D2EA;
@@ -21,6 +23,7 @@ $black: #000;
 }
 
 $primary-gradient:    defineGradient( $perfume, $portage );
+$primary-gradient-a: defineGradient( $perfume-a, $portage-a );
 $secondary-gradient:  defineGradient( $silver-tree, $turquoise-blue );
 $tertiary-gradient:   defineGradient( $cream-brulee, $mandys-pink );
 $quaternary-gradient: defineGradient( $suva-grey , $port-gore );
