--- a/src/components/input/_date-picker/input_date-picker.scss
+++ b/src/components/input/_date-picker/input_date-picker.scss
@@ -19,16 +19,45 @@
 }
 
 .air-datepicker {
+  $cell-size: 40px;
+
   --adp-font-family: inherit;
-  --adp-transition-duration: none;
-  --adp-transition-ease: none;
-  --adp-transition-offset: none;
-  --adp-padding: 0;
   --adp-width: 100%;
-  --adp-day-cell-height: 40px;
-  --adp-day-cell-width: 40px;
+  --adp-padding: 0;
+
+  --adp-day-cell-height: #{$cell-size};
+  --adp-day-cell-width:  #{$cell-size};
+
+  --adp-transition-duration: none;
+  --adp-transition-offset: none;
+  --adp-transition-ease: none;
+
+  --adp-color-other-month: #{rgba($valhalla, .25)};
+  --adp-color-disabled:    #{rgba($valhalla, .25)};
+  --adp-day-name-color: #{$perfume};
+  --adp-accent-color:   #{$perfume};
+  --adp-background-color-hover: #{rgba($perfume, .25)};
+
   --adp-cell-border-radius: 50%;
-  --adp-day-name-color: rgb($perfume);
-  --adp-color-other-month: rgba($valhalla, .25);
-  --adp-color-disabled: rgba($valhalla, .25);
+  --adp-cell-background-color-selected-hover: none;
+  --adp-cell-background-color-in-range-hover: none;
+  --adp-cell-background-color-selected: #{$primary-gradient-a};
+  --adp-cell-background-color-in-range: #{$primary-gradient-a};
+
+
+  &-cell{
+    &.-range-from-,
+    &.-range-to {
+      position: relative;
+
+      &::after {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        background: $primary-gradient;
+      }
+      
+    }
+  }
 }
