--- a/src/components/input/_date-picker/input_date-picker.scss
+++ b/src/components/input/_date-picker/input_date-picker.scss
@@ -10,12 +10,13 @@ $font-size: 12px;
 .input__date-picker {
   position: absolute;
   top: 50px;
-  padding: 19px;
-  width: 280px;
+  padding: 20px;
+  width: 320px;
   border: 1px solid rgba($valhalla, .5);
   border-radius: 4px;
-  background-color: $white;
+  box-sizing: border-box;
   box-shadow: 0px 10px 20px rgba($valhalla, 0.05);
+  background-color: $white;
   z-index: 20;
   visibility: hidden;
 }
@@ -23,6 +24,7 @@ $font-size: 12px;
 .date-picker__buttons {
   display: flex;
   justify-content: space-between;
+  margin-top: 20px;
 }
 
 .air-datepicker {
@@ -75,6 +77,7 @@ $font-size: 12px;
 
   &-nav {
     &--action {
+      width: auto;
       color: $perfume;
     }
 
