Fixed mean-oval buttons inner components id generation

--- a/src/components/button/__mean-oval/button__mean-oval.pug
+++ b/src/components/button/__mean-oval/button__mean-oval.pug
@@ -4,7 +4,7 @@ mixin meanOvalButtons( item )
   each button in item.buttons
     - buttonCount += 1
 
-    - const buttonId = item.groupname + '_' + buttonCount
+    - const buttonId = item.groupname + '-' + buttonCount
     - const buttonText = button.text || 'click me'
     - const widthByPercent = button.widthbypercent || '30'
     - const isTextType = button.type === 'text'
