Date picker is under refactoring 12

--- a/src/components/input/_date-picker/input_date-picker.scss
+++ b/src/components/input/_date-picker/input_date-picker.scss
@@ -1,7 +1,5 @@
 @import "/node_modules/air-datepicker/air-datepicker.css";
-
-@import "../../../styles/gradient-fill-entities.scss";
-@import "../../components.scss";
+@import "/src/components/components.scss";
 @import "@variables";
 
 $cell-size: 40px;
